<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/lightgray"
        android:gravity="center">

        <TextView
            style="@style/myViewStyle"
            android:text="@string/msj"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/green"/>

        <LinearLayout
            style="@style/myViewStyle.LYmatch">

            <ImageView
                style="@style/myImageViewStyle"
                android:src="@drawable/square"/>

            <TextView
                android:id="@+id/textVladoid"
                style="@style/myViewStyle.TV"
                android:text="@string/lado"/>

            <EditText
                android:id="@+id/editTladoid"
                style="@style/myViewStyle.ET"
                android:hint="@string/getlado"/>
        </LinearLayout>

        <LinearLayout
            style="@style/myViewStyle.LYmatch">

            <ImageView
                style="@style/myImageViewStyle"
                android:src="@drawable/circle"/>

            <TextView
                android:id="@+id/textVradioid"
                style="@style/myViewStyle.TV"
                android:text="@string/radio"/>

            <EditText
                android:id="@+id/editTradioid"
                style="@style/myViewStyle.ET"
                android:hint="@string/getradio"/>
        </LinearLayout>

        <LinearLayout
            style="@style/myViewStyle.LYmatch">

            <LinearLayout
                style="@style/myViewStyle"
                android:orientation="vertical">

                <ImageView
                    style="@style/myImageViewStyle"
                    android:src="@drawable/triangle"/>

                <ImageView
                    style="@style/myImageViewStyle"
                    android:src="@drawable/rectangle"/>

            </LinearLayout>

            <LinearLayout
                style="@style/myViewStyle"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/myViewStyle"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textVbaseid"
                        style="@style/myViewStyle.TV"
                        android:text="@string/base"/>

                    <EditText
                        android:id="@+id/editTbaseid"
                        style="@style/myViewStyle.ET"
                        android:hint="@string/getbase"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/myViewStyle"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                <TextView
                        android:id="@+id/textValtid"
                        style="@style/myViewStyle.TV"
                        android:text="@string/alt"/>

                    <EditText
                        android:id="@+id/editTaltid"
                        style="@style/myViewStyle.ET"
                        android:hint="@string/getalt"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioBsquid"
                style="@style/myViewStyle.BT"
                android:text="@string/square"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioBcirid"
                style="@style/myViewStyle.BT"
                android:text="@string/circle"/>

            <RadioButton
                android:id="@+id/radioBtriaid"
                style="@style/myViewStyle.BT"
                android:text="@string/triangle"/>

            <RadioButton
                android:id="@+id/radioBrectid"
                style="@style/myViewStyle.BT"
                android:text="@string/rectangle"/>
        </RadioGroup>

        <Button
            android:id="@+id/buttonCalcid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/green"/>

        <LinearLayout
            style="@style/myViewStyle"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textVresid"
                style="@style/myViewStyle"
                android:textSize="30dp"
                android:text="@string/res"/>

            <TextView
                android:id="@+id/textVsetresid"
                style="@style/myViewStyle"
                android:gravity="center"
                android:textSize="30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
